...

function HomeAppBar() {
  return (
    <View style={styles.appBar}>
      <View>
        <NativeTypography variant="eyebrow" style={styles.appBarEyebrow}>
          Добредојде назад
        </NativeTypography>
        <NativeTypography variant="title" style={styles.appBarTitle}>
          Nova
        </NativeTypography>
      </View>
      <View style={styles.appBarActions}>
        <IconButton label="Switch locale" icon="globe-outline" />
        <IconButton label="Inbox" icon="mail-unread-outline" />
      </View>
...
